login_veri update

--- a/app/login/login.html
+++ b/app/login/login.html
@@ -28,7 +28,7 @@
             <div class="form-wrapper">
                 <form name="veriform" id="veriform" action="mainPage.html" method="post">
                     <div class="input-group user-wrapper">
-                        <input id="user" name="user" type="text" placeholder="用户名" />
+                        <input id="user" name="user" type="text" placeholder="用户名" autocomplete="off"/>
                     </div>
                     <div class="input-group password-wrapper">
                         <input id="password" name="password" type="password" placeholder="密码" />
