--- a/app/main/amp_main.html
+++ b/app/main/amp_main.html
@@ -36,15 +36,12 @@
             <h5 class="sidebartitle">
                 <a href="#" class="menutoggle"><em class="ys-icon-spirit ys-icon-togglebar"></em></a>
             </h5>
+            <div class="amp-side-toolbar">
+
+            </div><!--amp-side-toolbar-->
             <ul class="nav nav-pills nav-stacked nav-bracket">
 
             </ul>
-          <!--  <div class="system-toggle">
-                <ul>
-                    <li class="active"><a href="http://www.yueworld.cn/amp/" class="system-item"><em class="ys-icon-spirit ys-icon-systoggle"></em>商业系统</a></li>
-                    <li ><a href="http://www.yueworld.cn/amp_sys/" class="system-item"><em class="ys-icon-spirit ys-icon-systoggle"></em>AMP资管平台</a></li>
-                </ul>
-            </div>-->
         </div><!-- leftpanelinner -->
     </div><!-- leftpanel -->
     <div class="headerpanel">
@@ -52,19 +49,12 @@
             <div class="head-main-menu">
                 <!-- Nav tabs -->
             </div>
-            <div class="header-right">
+           <!-- <div class="header-right">
                 <span class="ys-figure ys-useer-figure"></span>
-            </div> <!--header-right-->
+            </div> &lt;!&ndash;h-->eader-right-->
         </div><!-- headerbar -->
     </div>
     <div class="mainpanel">
-
-
-
-        <div class="pageheader clearfix">
-            <!-- Tab panes-->
-        </div>
-
         <div class="contentpanel">
             <div class="amp-content-header clearfix">
                 <!-- Breadcrumb / Summary info-->
@@ -72,14 +62,8 @@
             </div><!--amp-content-header-->
             <div class="ys-block">
 
-
             </div><!--ys-block-->
         </div><!-- contentpanel -->
-        <div class="footerpanel">
-            <div class="container">
-                <span>Copyright © 2016 YUESHANG 上海悦商信息科技有限公司 <em>沪ICP备15034598号</em> 沪网文[2016]0005-005号</span>
-            </div>
-        </div>
     </div><!-- mainpanel -->
 
     <!-- rightpanel -->
