--- a/app/.tmp/amp_main.html
+++ b/app/.tmp/amp_main.html
@@ -13,6 +13,7 @@
     <link href="../static/dist/css/animate.css" rel="stylesheet">
     <link href="../static/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/common/common.css" rel="stylesheet">
+    <link href="../static/css/views/noi.css" rel="stylesheet">
     <!-- 自有CSS -->
     <link href="../static/css/main/amp_main.css" rel="stylesheet">
 </head>
