--- a/app/main/amp_main.html
+++ b/app/main/amp_main.html
@@ -15,6 +15,7 @@
     <link href="../static/css/common/common.css" rel="stylesheet">
     <!-- 自有CSS -->
     <link href="../static/css/main/amp_main.css" rel="stylesheet">
+    <link href="../static/css/main/amp_main.css" rel="stylesheet">
 </head>
 <body>
 
@@ -31,6 +32,7 @@
     <div class="leftpanel">
         <div class="logopanel">
             <!--<h1>悦商<span>AMP</span>系统</h1>-->
+            <em class="ys-icon ys-icon-amp-s"></em>
         </div><!-- logopanel -->
         <div class="leftpanelinner">
             <h5 class="sidebartitle">
@@ -49,13 +51,11 @@
             <div class="head-main-menu">
                 <!-- Nav tabs -->
             </div>
-           <!-- <div class="header-right">
-                <span class="ys-figure ys-useer-figure"></span>
-            </div> &lt;!&ndash;h-->eader-right-->
+
         </div><!-- headerbar -->
     </div>
     <div class="mainpanel">
-        <div class="contentpanel">
+        <div class="amp-content-panel">
             <div class="amp-content-header clearfix">
                 <!-- Breadcrumb / Summary info-->
 
