--- a/app/main/create_project.html
+++ b/app/main/create_project.html
@@ -90,7 +90,8 @@
         </div>
     </div><!--ys-footer-->
 </main><!--end main-->
-
+<i class="glyphicon glyphicon-arrow-left"></i>
+<i class="glyphicon glyphicon-arrow-right"></i>
 <!-- Script 导入部分 -->
 <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
 <script src="../static/dist/js/bootstrap.min.js"></script>
