noi page update

--- a/app/.tmp/noi_base/noi_res.html
+++ b/app/.tmp/noi_base/noi_res.html
@@ -4,7 +4,7 @@
             <table class="table table-right-bordered amp-table" >
                 <thead>
                 <tr>
-                    <th>净营运收入NOI(万元)</th>
+                    <th>净运营收入NOI(万元)</th>
                     <th>总投资成本(万元)</th>
                     <th>估值(万元)</th>
                     <th>贷款(万元)</th>
@@ -180,10 +180,10 @@
                         <!-- end -->
                         </tbody>
                         <tfoot>
-                        <tr class="tr-main">
+                        <tr>
                             <th>NOI</th>
                         </tr>
-                        <tr class="tr-sub">
+                        <tr>
                             <th>利润率</th>
                         </tr>
                         </tfoot>
@@ -517,7 +517,7 @@
                                 <!-- end -->
                                 </tbody>
                                 <tfoot>
-                                <tr class="tr-main">
+                                <tr>
                                     <td>216.57</td>
                                     <td>227.84</td>
                                     <td>-11.27</td>
@@ -535,7 +535,7 @@
 
                                     <td>63.35%</td>
                                 </tr>
-                                <tr class="tr-sub">
+                                <tr>
                                     <td>216.57</td>
                                     <td>227.84</td>
                                     <td>-11.27</td>
@@ -565,8 +565,8 @@
             </div>
         </div>
 
-        <div class="amp-table-wrapper" id="noi-arrearage">
-            <table class="table table-no-bordered table-hover amp-table">
+        <div class="amp-table-wrapper">
+            <table class="table table-no-bordered amp-table">
                 <thead>
                 <tr >
                     <th></th>
