--- a/app/main/amp_main_test_noi_swiper_iscroll.html
+++ b/app/main/amp_main_test_noi_swiper_iscroll.html
@@ -105,6 +105,8 @@
                 scrollbars: true
             });
 
+
+
         });
 
 
@@ -182,7 +184,7 @@
                 <table class="table table-right-bordered amp-table" >
                     <thead>
                     <tr>
-                        <th>净运营收入NOI(万元)</th>
+                        <th>净营运收入NOI(万元)</th>
                         <th>总投资成本(万元)</th>
                         <th>估值(万元)</th>
                         <th>贷款(万元)</th>
