--- a/app/main/amp_main_test_noi_swiper_stick.html
+++ b/app/main/amp_main_test_noi_swiper_stick.html
@@ -98,8 +98,6 @@
                         $(this).find("tr").eq(index).nextUntil(".tr-main").toggle();
                     });
                 }
-
-
             });
 
         });
@@ -185,7 +183,7 @@
                 <table class="table table-right-bordered amp-table" >
                     <thead>
                     <tr>
-                        <th>净运营收入NOI(万元)</th>
+                        <th>净营运收入NOI(万元)</th>
                         <th>总投资成本(万元)</th>
                         <th>估值(万元)</th>
                         <th>贷款(万元)</th>
