noi page update

--- a/app/login/login.html
+++ b/app/login/login.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="input-group">
-                        <a href="#" id="btn-login" class="ys-btn">登录</a>
+                        <a href="#" id="btn-login" class="ys-btn amp-btn">登录</a>
                     </div>
 
                     <div class="login-addon clearfix">
