--- a/app/main/amp_main_test_noi_pin.html
+++ b/app/main/amp_main_test_noi_pin.html
@@ -260,7 +260,7 @@
                     <div class="ys-table-static ys-table-static-left" style="width:160px;">
                         <table class="table table-no-bordered amp-table table-hover table-header-fixed" style="width:100%;">
                             <thead>
-                            <tr style="border-bottom:solid 8px #fff;">
+                            <tr style="">
                                 <th class="fake-th"></th>
                             </tr>
                             <tr class="thead-tr-sub">
@@ -275,7 +275,7 @@
                             <div class="swiper-slide">
                                 <table class="table table-no-bordered amp-table table-hover table-header-fixed" style="width:1500px;" >
                                     <thead>
-                                    <tr style="border-bottom:solid 8px #fff;">
+                                    <tr style="">
                                         <th colspan="4" ><em><</em>2016-08(万元)</th>
                                         <th colspan="4" >全年累计(万元)</th>
                                         <th colspan="4" >全年(万元)</th>
@@ -313,7 +313,7 @@
                         <table class="table table-no-bordered amp-table table-hover" style="width:100%;">
                             <tbody>
                             <tr class="tr-main">
-                                <th>收入<em class="glyphicon glyphicon-menu-down"></em></th>
+                                <th>收入<em class="ys-icon icon-menu-down"></em></th>
                             </tr>
                             <tr class="tr-sub">
                                 <th>租金</th>
@@ -328,7 +328,7 @@
                             </tr>
 
                             <tr class="tr-main">
-                                <th>费用<em class="glyphicon glyphicon-menu-down"></em></th>
+                                <th>费用<em class="ys-icon icon-menu-down"></em></th>
                             </tr>
                             <tr class="tr-sub">
                                 <th>增值税</th>
@@ -738,8 +738,8 @@
                                     <tr class="tr-sub">
                                         <td>216.57</td>
                                         <td>227.84</td>
-                                        <td>-11.27</td>
-                                        <td class="t-split">-4.95%</td>
+                                        <td class="notify">-11.27</td>
+                                        <td class="t-split notify">-4.95%</td>
 
                                         <td>216.57</td>
                                         <td>227.84</td>
@@ -787,7 +787,7 @@
                     </thead>
                     <tbody>
                     <tr class="tr-main">
-                        <th>欠费<em class="glyphicon glyphicon-menu-down"></em></th>
+                        <th>欠费<em class="ys-icon icon-menu-down"></em></th>
                         <td>948.76</td>
                         <td>45.69</td>
                         <td>84.64</td>
