--- a/app/main/amp_main_test_noi_swiper_iscroll.html
+++ b/app/main/amp_main_test_noi_swiper_iscroll.html
@@ -295,7 +295,7 @@
                            <table class="table table-no-bordered amp-table table-hover" style="width:100%;">
                                <tbody>
                                <tr class="tr-main">
-                                   <th>收入<em class="glyphicon glyphicon-menu-down"></em></th>
+                                   <th>收入<em class="ys-icon icon-menu-down"></em></th>
                                </tr>
                                <tr class="tr-sub">
                                    <th>租金</th>
@@ -310,7 +310,7 @@
                                </tr>
 
                                <tr class="tr-main">
-                                   <th>费用<em class="glyphicon glyphicon-menu-down"></em></th>
+                                   <th>费用<em class="ys-icon icon-menu-down"></em></th>
                                </tr>
                                <tr class="tr-sub">
                                    <th>增值税</th>
@@ -762,7 +762,7 @@
                     </thead>
                     <tbody>
                     <tr class="tr-main">
-                        <th>欠费<em class="glyphicon glyphicon-menu-down"></em></th>
+                        <th>欠费<em class="ys-icon icon-menu-down"></em></th>
                         <td>948.76</td>
                         <td>45.69</td>
                         <td>84.64</td>
