--- a/app/main/create_project.html
+++ b/app/main/create_project.html
@@ -50,7 +50,7 @@
                                 <input type="text" placeholder=" " value="">
                             </div>
 
-                            <div class="input-group">
+                            <div class="input-group" id="open-date-wrapper">
                                 <label>开业时间</label>
                                 <input type="text" placeholder=" " value="" class="datepicker" id="open-date" readonly>
                             </div>
